add: device status delete api
